# issue-demo-genrule-ngmodule

src/genrule-module/: BUILD.bazel  index.ts  my-module.tpl
src/hello-world/: BUILD.bazel  hello-world.component.html  hello-world.module.ts
